--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.activity.SettingActivity">
+    tools:context=".ui.view.activity.SettingActivity"
+    android:orientation="vertical">
+
+  <androidx.appcompat.widget.Toolbar
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="?attr/colorPrimaryVariant"
+      app:theme="@style/ThemeOverlay.AppCompat.Dark"
+      android:id="@+id/toolbar"/>
 
   <TextView
       android:id="@+id/titleTV"
@@ -31,4 +39,4 @@
       app:switchPadding="8dp" />
 
 
-  </androidx.coordinatorlayout.widget.CoordinatorLayout>
+  </LinearLayout>
