--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="10dp">
 
     <View
         android:background="#808080"
@@ -22,16 +23,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/mail_icon" />
+            app:srcCompat="@drawable/mail_icon"
+            android:layout_marginStart="22dp"
+            app:tint="@color/textcolor"/>
 
         <TextView
             android:id="@+id/menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="3dp"
             android:text="rnqhqaltjs@gmail.com"
             android:textColor="@color/textcolor"
-            android:textSize="20sp" />
+            android:textSize="12sp" />
 
     </LinearLayout>
 
